Update MaterialRefreshLayout to take an appBarLayout

--- a/app/src/main/res/layout/activity_scrollview.xml
+++ b/app/src/main/res/layout/activity_scrollview.xml
@@ -96,6 +96,17 @@
                 android:text="overLay"
                 android:textColor="#fff"/>
 
+            <Button
+                android:id="@+id/collapsing_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="#ff2020"
+                android:onClick="onClick"
+                android:text="Collapsing Toolbar"
+                android:textColor="#fff"/>
 
         </LinearLayout>
     </ScrollView>
